[package]
name = "VacayOS"
version = "0.1.0"
authors = ["apstemmer <apstemmer@hotmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

